fix: fix horizontal scroll fix font size of the dropdown content in responsive

--- a/src/components/description/styles.scss
+++ b/src/components/description/styles.scss
@@ -213,12 +213,16 @@
       }
     }
     .drop-container {
-      width: 110%;
+      width: 100%;
       justify-content: center;
       flex-direction: column;
       align-items: center;
       margin-bottom: 10px;
       box-sizing: border-box;
+
+      .dropdown {
+        width: 100%;
+      }
     }
   }
 }
