--- a/style.scss
+++ b/style.scss
@@ -4,11 +4,9 @@
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+   
     margin: 0;
-    overflow-x: hidden;
+   /* overflow-x: hidden;*/
 }
 
 @font-face {
